examples/test/testpolicy12150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12150
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key27: value1
      key43: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value22
          key15: value45
      podSelector:
        matchLabels:
          key12: value41
          key7: value35
